getting simple injector working with signalr; stopped passing all connection ids client side

--- a/Flexylexy.Web/Content/global.scss
+++ b/Flexylexy.Web/Content/global.scss
@@ -4,6 +4,11 @@
 @import "pages/_lobby.scss";
 
 
+body {
+    background-color: #666;
+    color: #fff;
+}
+
 
 .margin {
     margin: $margin-size-normal;
