--- a/Flexylexy.Web/Views/Shared/_Layout.cshtml
+++ b/Flexylexy.Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
         System.import('app').catch(function(err) { console.error(err); });
     </script>
 
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Montserrat" rel="stylesheet">
+
     <base href="/">
 </head>
 <body>
