--- a/Flexylexy.Web/Content/pages/_lobby.scss
+++ b/Flexylexy.Web/Content/pages/_lobby.scss
@@ -1,8 +1,22 @@
 ﻿lobby {
     .lobby {
-        &__list {
-            border: 1px solid #000;
+        &__header {
+            border: 1px solid  #fff;
             padding: 10px;
+            border-radius: 10px;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+            border-bottom: 0;
+            background-color: #fff;
+            color: #666;
+        }
+
+        &__list {
+            border: 1px solid #fff;
+            padding: 10px;
+            border-radius: 10px;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
 
             &__player {
                 &-name {
@@ -17,16 +31,34 @@
 
         &__chat {
             &-room {
-                padding: 10px;
                 min-width: 200px;
                 min-height: 200px;
-                border: 1px solid #000;
+                border: 1px solid  #fff;
+                padding: 10px;
+                border-radius: 10px;
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: 0;
+                border-bottom: 0;
+                height: 300px;
+                overflow: auto;
+
+                &__entry {
+                    &__sender {
+                        color: #00ffff;
+                    }
+
+                    &__message {
+
+                    }
+                }
             }
 
             &-control {
                 padding: 10px;
-                height: 100px;
-                border: 1px solid #000;
+                border: 1px solid #fff;                
+                border-radius: 10px;
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
             }
         }
     }
